--- a/assets/css/another.css
+++ b/assets/css/another.css
@@ -1057,7 +1057,7 @@ footer p .from-city.start+span+span {
 }
 
 .action-box p span {
-    background: #d2c0e7;
+    background: #a8adf1;
     color: #fff;
     border-radius: 2px;
     padding: 0 2px 2px;
